--- a/templates/work.html
+++ b/templates/work.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/assets/favicon.ico" rel="icon">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
   <title>Title page</title>
 
@@ -43,17 +43,17 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About me</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./components.html" title="">05 : Components</a></li>
+            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
           </ul>
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./index.html" title="" class="active">001</a></li>
-            <li><a href="./index.html" title="">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
-            <li><a href="./index.html" title="">004</a></li>
-            <li><a href="./index.html" title="">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
+            <li><a href="./work.html" title="" class="active">001</a></li>
+            <li><a href="./work.html" title="">002</a></li>
+            <li><a href="./work.html" title="">003</a></li>
+            <li><a href="./work.html" title="">004</a></li>
+            <li><a href="./work.html" title="">005</a></li>
+            <li><a href="./work.html" title="">006</a></li>
           </ul>
 
 
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+          <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
               <h1 class="h2">001 : Fringilla sit amet</h1>
@@ -85,18 +85,18 @@
         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
+              <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
               <p>Menphis skyline</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
+              <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
               <p>Menphis skyline</p>
             </div>
           </div>
         </div>
 
         <div class="col-xs-12">
-          <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
+          <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt="">
         </div>
 
       </div>
