--- a/templates/works.html
+++ b/templates/works.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/assets/favicon.ico" rel="icon">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
   <title>Title page</title>
 
@@ -43,7 +43,7 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About me</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./components.html" title="">05 : Components</a></li>
+            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
           </ul>
 
 
@@ -74,7 +74,7 @@
                   <div class="col-sm-4">
 
                     <a href="./work.html" title="" class="black-image-project-hover">
-                      <img src="./assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                      <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>001/006</h4>
@@ -85,7 +85,7 @@
                   </div>
                   <div class="col-sm-4">
                     <a href="./work.html" title="" class="black-image-project-hover">
-                      <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                      <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
@@ -96,7 +96,7 @@
                   </div>
                   <div class="col-sm-4">
                     <a href="./work.html" title="" class="black-image-project-hover">
-                      <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                      <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/006</h4>
@@ -114,7 +114,7 @@
                 <div class="row">
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
-                      <img src="./assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
+                      <img src="./static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
@@ -125,7 +125,7 @@
                   </div>
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
-                      <img src="./assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
+                      <img src="./static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>005/006</h4>
@@ -137,7 +137,7 @@
 
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
-                      <img src="./assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
+                      <img src="./static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>006/006</h4>
